fixed padding in nav item on mobile view

--- a/src/scss/custom/_nav-top.scss
+++ b/src/scss/custom/_nav-top.scss
@@ -136,6 +136,7 @@
     @include breakpoint(tablet) {
         @include flex-base(var(--size-3));
         flex-direction: row;
+        overflow: visible;
 
         a:hover {
             background: none;
@@ -214,13 +215,9 @@
     transform: translateX(100%);
     transition: transform 300ms, opacity 300ms;
 
-    > li {
-        padding-inline: var(--size-1);
-    }
-
     > li > a {
         padding-block: var(--size-1);
-        padding-inline: var(--size-1);
+        padding-inline: var(--size-2);
     }
     
     @include breakpoint(tablet) {
